--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
 
 			<div class="row justify-content-center">
 				<figure class="w-75 mt-3" style="aspect-ratio: 2/1;" data-aos="zoom-in-up" data-lightbox-thumbnail>
-					<source media="(min-width: 3850px)" srcset="https://placebeard.it/500/500" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 80%;">
+					<!-- <source media="(min-width: 3850px)" srcset="https://placebeard.it/500/500" class="w-100 h-100 object-fit-cover rounded" style="object-position: 50% 50%;"> -->
 					<a href="./dist/img/gallery/engaged1.jpg">
 						<img src="./dist/img/gallery/engaged1.jpg" style="object-position: 50% 30%;" class="thumbnail rounded-3" alt="Engaged 1">
 					</a>
@@ -443,127 +443,87 @@
 				<div class="carousel-inner">
 
 					<div class="carousel-item active">
-						<div class="row row-cols-2 row-cols-lg-4">
-							<div class="col mt-4">
-								<a href="./dist/img/gallery/sumatra1.jpg" data-toggle="lightbox" data-gallery="my-gallery">
-									<img src="./dist/img/gallery/sumatra1.jpg" alt="Sumatera 1" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 90%;">
-								</a>
-							</div>
-							<div class="col mt-4">
-								<a href="./dist/img/gallery/sumatra2.jpg" data-toggle="lightbox" data-gallery="my-gallery">
-									<img src="./dist/img/gallery/sumatra2.jpg" alt="Sumatera 2" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 70%;">
-								</a>
-							</div>
-							<div class="col mt-4">
-								<a href="./dist/img/gallery/sumatra3.jpg" data-toggle="lightbox" data-gallery="my-gallery">
-									<img src="./dist/img/gallery/sumatra3.jpg" alt="Sumatera 3" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 50%;">
-								</a>
-							</div>
-							<div class="col mt-4">
-								<a href="./dist/img/gallery/sumatra4.jpg" data-toggle="lightbox" data-gallery="my-gallery">
-									<img src="./dist/img/gallery/sumatra4.jpg" alt="Sumatera 4" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 30%;">
-								</a>
-							</div>
+						<div class="row row-cols-2 row-cols-lg-4" data-lightbox-gallery-1>
+							<a class="col mt-4" href="./dist/img/gallery/sumatra1.jpg">
+								<img src="./dist/img/gallery/sumatra1.jpg" alt="Sumatera 1" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 90%;">
+							</a>
+							<a class="col mt-4" href="./dist/img/gallery/sumatra2.jpg">
+								<img src="./dist/img/gallery/sumatra2.jpg" alt="Sumatera 2" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 70%;">
+							</a>
+							<a class="col mt-4" href="./dist/img/gallery/sumatra3.jpg">
+								<img src="./dist/img/gallery/sumatra3.jpg" alt="Sumatera 3" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 50%;">
+							</a>
+							<a class="col mt-4" href="./dist/img/gallery/sumatra4.jpg">
+								<img src="./dist/img/gallery/sumatra4.jpg" alt="Sumatera 4" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 30%;">
+							</a>
 						</div>
 					</div>
 
 					<div class="carousel-item">
-						<div class="row row-cols-2 row-cols-lg-4">
-							<div class="col mt-4">
-								<a href="./dist/img/gallery/sumatra5.jpg" data-toggle="lightbox" data-gallery="my-gallery">
-									<img src="./dist/img/gallery/sumatra5.jpg" alt="Sumatera 5" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 30%;">
-								</a>
-							</div>
-							<div class="col mt-4">
-								<a href="./dist/img/gallery/sumatra6.jpg" data-toggle="lightbox" data-gallery="my-gallery">
-									<img src="./dist/img/gallery/sumatra6.jpg" alt="Sumatera 6" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 30%;">
-								</a>
-							</div>
-							<div class="col mt-4">
-								<a href="./dist/img/gallery/sumatra7.jpg" data-toggle="lightbox" data-gallery="my-gallery">
-									<img src="./dist/img/gallery/sumatra7.jpg" alt="Sumatera 7" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 50%;">
-								</a>
-							</div>
-							<div class="col mt-4">
-								<a href="./dist/img/gallery/sumatra8.jpg" data-toggle="lightbox" data-gallery="my-gallery">
-									<img src="./dist/img/gallery/sumatra8.jpg" alt="Sumatera 8" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 50%;">
-								</a>
-							</div>
+						<div class="row row-cols-2 row-cols-lg-4" data-lightbox-gallery-2>
+							<a class="col mt-4" href="./dist/img/gallery/sumatra5.jpg">
+								<img src="./dist/img/gallery/sumatra5.jpg" alt="Sumatera 5" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 30%;">
+							</a>
+							<a class="col mt-4" href="./dist/img/gallery/sumatra6.jpg">
+								<img src="./dist/img/gallery/sumatra6.jpg" alt="Sumatera 6" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 30%;">
+							</a>
+							<a class="col mt-4" href="./dist/img/gallery/sumatra7.jpg">
+								<img src="./dist/img/gallery/sumatra7.jpg" alt="Sumatera 7" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 50%;">
+							</a>
+							<a class="col mt-4" href="./dist/img/gallery/sumatra8.jpg">
+								<img src="./dist/img/gallery/sumatra8.jpg" alt="Sumatera 8" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 50%;">
+							</a>
 						</div>
 					</div>
 
 					<div class="carousel-item">
-						<div class="row row-cols-2 row-cols-lg-4">
-							<div class="col mt-4">
-								<a href="./dist/img/gallery/jawa1.jpg" data-toggle="lightbox" data-gallery="my-gallery">
-									<img src="./dist/img/gallery/jawa1.jpg" alt="Jawa 1" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 50%;">
-								</a>
-							</div>
-							<div class="col mt-4">
-								<a href="./dist/img/gallery/jawa2.jpg" data-toggle="lightbox" data-gallery="my-gallery">
-									<img src="./dist/img/gallery/jawa2.jpg" alt="Jawa 2" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 50%;">
-								</a>
-							</div>
-							<div class="col mt-4">
-								<a href="./dist/img/gallery/jawa3.jpg" data-toggle="lightbox" data-gallery="my-gallery">
-									<img src="./dist/img/gallery/jawa3.jpg" alt="Jawa 3" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 50%;">
-								</a>
-							</div>
-							<div class="col mt-4">
-								<a href="./dist/img/gallery/jawa4.jpg" data-toggle="lightbox" data-gallery="my-gallery">
-									<img src="./dist/img/gallery/jawa4.jpg" alt="Jawa 4" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 50%;">
-								</a>
-							</div>
+						<div class="row row-cols-2 row-cols-lg-4" data-lightbox-gallery-3>
+							<a class="col mt-4" href="./dist/img/gallery/jawa1.jpg">
+								<img src="./dist/img/gallery/jawa1.jpg" alt="Jawa 1" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 50%;">
+							</a>
+							<a class="col mt-4" href="./dist/img/gallery/jawa2.jpg">
+								<img src="./dist/img/gallery/jawa2.jpg" alt="Jawa 2" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 50%;">
+							</a>
+							<a class="col mt-4" href="./dist/img/gallery/jawa3.jpg">
+								<img src="./dist/img/gallery/jawa3.jpg" alt="Jawa 3" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 50%;">
+							</a>
+							<a class="col mt-4" href="./dist/img/gallery/jawa4.jpg">
+								<img src="./dist/img/gallery/jawa4.jpg" alt="Jawa 4" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 50%;">
+							</a>
 						</div>
 					</div>
 
 					<div class="carousel-item">
-						<div class="row row-cols-2 row-cols-lg-4">
-							<div class="col mt-4">
-								<a href="./dist/img/gallery/jawa5.jpg" data-toggle="lightbox" data-gallery="my-gallery">
-									<img src="./dist/img/gallery/jawa5.jpg" alt="Jawa 5" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 50%;">
-								</a>
-							</div>
-							<div class="col mt-4">
-								<a href="./dist/img/gallery/jawa6.jpg" data-toggle="lightbox" data-gallery="my-gallery">
-									<img src="./dist/img/gallery/jawa6.jpg" alt="Jawa 6" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 50%;">
-								</a>
-							</div>
-							<div class="col mt-4">
-								<a href="./dist/img/gallery/jawa7.jpg" data-toggle="lightbox" data-gallery="my-gallery">
-									<img src="./dist/img/gallery/jawa7.jpg" alt="Jawa 7" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 50%;">
-								</a>
-							</div>
-							<div class="col mt-4">
-								<a href="./dist/img/gallery/jawa8.jpg" data-toggle="lightbox" data-gallery="my-gallery">
-									<img src="./dist/img/gallery/jawa8.jpg" alt="Jawa 8" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 50%;">
-								</a>
-							</div>
+						<div class="row row-cols-2 row-cols-lg-4" data-lightbox-gallery-4>
+							<a class="col mt-4" href="./dist/img/gallery/jawa5.jpg">
+								<img src="./dist/img/gallery/jawa5.jpg" alt="Jawa 5" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 50%;">
+							</a>
+							<a class="col mt-4" href="./dist/img/gallery/jawa6.jpg">
+								<img src="./dist/img/gallery/jawa6.jpg" alt="Jawa 6" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 50%;">
+							</a>
+							<a class="col mt-4" href="./dist/img/gallery/jawa7.jpg">
+								<img src="./dist/img/gallery/jawa7.jpg" alt="Jawa 7" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 50%;">
+							</a>
+							<a class="col mt-4" href="./dist/img/gallery/jawa8.jpg">
+								<img src="./dist/img/gallery/jawa8.jpg" alt="Jawa 8" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 50%;">
+							</a>
 						</div>
 					</div>
 
 					<div class="carousel-item">
-						<div class="row row-cols-2 row-cols-lg-4">
-							<div class="col mt-4">
-								<a href="./dist/img/gallery/engaged1.jpg" data-toggle="lightbox" data-gallery="my-gallery">
-									<img src="./dist/img/gallery/engaged1.jpg" alt="Tunangan 1" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 50%;">
-								</a>
-							</div>
-							<div class="col mt-4">
-								<a href="./dist/img/gallery/engaged2.jpg" data-toggle="lightbox" data-gallery="my-gallery">
-									<img src="./dist/img/gallery/engaged2.jpg" alt="Tunangan 2" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 50%;">
-								</a>
-							</div>
-							<div class="col mt-4">
-								<a href="./dist/img/gallery/engaged3.jpg" data-toggle="lightbox" data-gallery="my-gallery">
-									<img src="./dist/img/gallery/engaged3.jpg" alt="Tunangan 3" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 50%;">
-								</a>
-							</div>
-							<div class="col mt-4">
-								<a href="./dist/img/gallery/engaged4.jpg" data-toggle="lightbox" data-gallery="my-gallery">
-									<img src="./dist/img/gallery/engaged4.jpg" alt="Tunangan 4" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 50%;">
-								</a>
-							</div>
+						<div class="row row-cols-2 row-cols-lg-4" data-lightbox-gallery-5>
+							<a class="col mt-4" href="./dist/img/gallery/engaged1.jpg">
+								<img src="./dist/img/gallery/engaged1.jpg" alt="Tunangan 1" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 50%;">
+							</a>
+							<a class="col mt-4" href="./dist/img/gallery/engaged2.jpg">
+								<img src="./dist/img/gallery/engaged2.jpg" alt="Tunangan 2" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 50%;">
+							</a>
+							<a class="col mt-4" href="./dist/img/gallery/engaged3.jpg">
+								<img src="./dist/img/gallery/engaged3.jpg" alt="Tunangan 3" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 50%;">
+							</a>
+							<a class="col mt-4" href="./dist/img/gallery/engaged4.jpg">
+								<img src="./dist/img/gallery/engaged4.jpg" alt="Tunangan 4" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 50%;">
+							</a>
 						</div>
 					</div>
 				</div>
