--- a/index.html
+++ b/index.html
@@ -440,10 +440,10 @@
 
 			<div id="myCarousel" data-aos="zoom-in-up" class="carousel slide w-75 m-auto" data-bs-ride="carousel" data-bs-touch="true" data-bs-interval="4000">
 				<!-- The slideshow/carousel -->
-				<div class="carousel-inner">
+				<div class="carousel-inner" data-lightbox-gallery>
 
 					<div class="carousel-item active">
-						<div class="row row-cols-2 row-cols-lg-4" data-lightbox-gallery-1>
+						<div class="row row-cols-2 row-cols-lg-4">
 							<a class="col mt-4" href="./dist/img/gallery/sumatra1.jpg">
 								<img src="./dist/img/gallery/sumatra1.jpg" alt="Sumatera 1" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 90%;">
 							</a>
@@ -460,7 +460,7 @@
 					</div>
 
 					<div class="carousel-item">
-						<div class="row row-cols-2 row-cols-lg-4" data-lightbox-gallery-2>
+						<div class="row row-cols-2 row-cols-lg-4">
 							<a class="col mt-4" href="./dist/img/gallery/sumatra5.jpg">
 								<img src="./dist/img/gallery/sumatra5.jpg" alt="Sumatera 5" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 30%;">
 							</a>
@@ -477,7 +477,7 @@
 					</div>
 
 					<div class="carousel-item">
-						<div class="row row-cols-2 row-cols-lg-4" data-lightbox-gallery-3>
+						<div class="row row-cols-2 row-cols-lg-4">
 							<a class="col mt-4" href="./dist/img/gallery/jawa1.jpg">
 								<img src="./dist/img/gallery/jawa1.jpg" alt="Jawa 1" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 50%;">
 							</a>
@@ -494,7 +494,7 @@
 					</div>
 
 					<div class="carousel-item">
-						<div class="row row-cols-2 row-cols-lg-4" data-lightbox-gallery-4>
+						<div class="row row-cols-2 row-cols-lg-4">
 							<a class="col mt-4" href="./dist/img/gallery/jawa5.jpg">
 								<img src="./dist/img/gallery/jawa5.jpg" alt="Jawa 5" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 50%;">
 							</a>
@@ -511,7 +511,7 @@
 					</div>
 
 					<div class="carousel-item">
-						<div class="row row-cols-2 row-cols-lg-4" data-lightbox-gallery-5>
+						<div class="row row-cols-2 row-cols-lg-4">
 							<a class="col mt-4" href="./dist/img/gallery/engaged1.jpg">
 								<img src="./dist/img/gallery/engaged1.jpg" alt="Tunangan 1" class="rasio-1x1 w-100 object-fit-cover rounded" style="object-position: 50% 50%;">
 							</a>
