--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 	<!-- PLUGINS -->
 	<link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/lightgallery@2.0.1/css/lightgallery-bundle.min.css">
 	<link rel="stylesheet" href="./dist/css/countdown.css">
-	<link rel="stylesheet" href="./dist/css/lightbox.css">
 	<!-- CUSTOM -->
 	<link rel="stylesheet" href="./dist/css/classes.css">
 	<link rel="stylesheet" href="./dist/css/main.css">
