--- a/index.html
+++ b/index.html
@@ -608,7 +608,10 @@
 							<label for="message" class="form-label">Isi Pesan dan Ucapan</label>
 							<textarea class="form-control" id="message" rows="3" required></textarea>
 						</div>
-						<button type="submit" class="btn btn-pink mt-3">Kirim</button>
+						<div class="mt-3 d-flex justify-content-between align-items-center">
+							<button type="submit" class="btn btn-pink">Kirim</button>
+							<p id="totalComments" class="pe-3">0 Comments</p>
+						</div>
 					</form>
 					<div id="commentList" class="mt-3 h-50 overflow-y-auto">
 						<div class="d-flex mb-2 d-none">
